# programming-workouts

./: .gitignore  LICENSE  README.md
advent_of_code/2023/: notes.md  notes.txt
advent_of_code/2024/: ressources.md
advent_of_code/2025/: .gitignore  README.md
advent_of_code/2025/day01_ts_with_deno/: README.md  main.ts  main_test.ts
advent_of_code/2025/day02/: main_test.ts
advent_of_code/2025/day02_ts_with_deno/: README.md  deno.json  main.ts
advent_of_code/2025/day03/: README.md  main_test.ts
advent_of_code/2025/day03_ts_with_deno/: main.ts
advent_of_code/2025/day04/: README.md  main_test.ts
advent_of_code/2025/day04_ts_with_deno/: main.ts
advent_of_code/2025/day05/: README.md  main.ts  main_test.ts
advent_of_code/2025/day05_ts_with_deno/: README.md
advent_of_code/2025/day06/: README.md  main.ts
advent_of_code/2025/day06_ts_with_deno/: main_test.ts
advent_of_code/2025/day07/: README.md
advent_of_code/2025/day07_ts_with_deno/: README.md  main.ts  main_test.ts
advent_of_code/2025/day08/: README.md  main_test.ts
angular/my-app/: package-lock.json  package.json
clojure/move-zeros/: README.md
clojure/perfect-number-app/: README.md  project.clj
data/: data-projects-ideas.mm  sites-generaux.md
data/chuck_norris/: ressources.md
data/duckdb/python/MinimalistTest/: pyproject.toml
data/duckdb/python/MinimalistTest/minimalisttest/: main.py
data/got/: GoT_episodes.puml  data_GoT_episode.json  data_GoT_episode.txt  got_season_data.js  westeros_houses.json
data/movie/: ressources.md
data/pokemon/: ressources.md
data/superhero/: marvel.md
docker/apache/: Dockerfile  default-website.conf  index.html
electron/hello-electron/: index.html  main.js  package-lock.json  package.json
erri/: synthese_seances.md
erri/before_highschool/: synthese_seances.md
exercism/: exercism_configuration.txt
hbase/: data_GoT_episode.json
hbase/hbase_succintly/: docker_commands.txt
hbase/hbasetuto/: build.gradle  settings.gradle
hbase/jdd/: data_GoT_episode.txt
java/codingame/: SolutionNeutronsProtons.java
java/fizzbuzz/: pom.xml
java/perfectnumber/: pom.xml
java/simplejfx/: pom.xml
java/snippets/: closure-example.jpad  factorial-example.jpad  filter-map-reduce-example.jpad  fizzbuzz-with-stream.jpad  infinite-stream-example.jpad  lazy-list-odd-numbers.jpad  min-max-with-streams.jpad  pure-function-example.jpad
java/triforce/: pom.xml
lua/basic/: GuessNumber1.lua  GuessNumber2.lua  range.lua
python/base/: exemple_fichier_1.py  exemple_fichier_2.py  exemple_fonction.py  exemple_math.py  exemples_conversion_types.py  exemples_print_input.py  exemples_types_base.py  for_and_list.py  mangas.txt  somme_10_premiers_entiers.py  somme_10_premiers_entiers_for.py  test_parity.md
python/fizzbuzz/: fizzbuzz.py
python/misc/: math_problem.py
python/misc/BuilderPattern/: pyproject.toml
python/tkinter/comics-display-app/: pyproject.toml
python/tkinter/knowledge-ressources-manager/: pyproject.toml
python/tkinter/tkinter-in-python-tutorial/blackjack-game/: pyproject.toml
python/tkinter/tkinter-in-python-tutorial/number-guessing-game/: pyproject.toml
python/tkinter/tkinter-in-python-tutorial/password-generator-app/: pyproject.toml
scala/basic/: fpinscala_url.md
spring/spring-cli-and-groovy/: app.groovy
svelte/tutorial/: README.md
(+2215 files in other folders)
