[tool.poetry]
name = "comics-display-app"
version = "0.1.0"
description = ""
authors = ["TGITS <thegeekintheshell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"
pillow = "^10.4.0"
cbz = "^3.2.0"
unrar = "^0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
